fixed bug with subnav behind audio element

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,10 +6,10 @@
 /* * {
 	box-sizing: border-box;
 } */
+/* background-image: linear-gradient(var(--white), var(--vibrant-red)); */
 
 body {
 	padding: 20px;
-    /* background-image: linear-gradient(var(--white), var(--vibrant-red)); */
 	font-family: Arial, Helvetica, sans-serif;
 	max-width: 800px;
 	margin: 0 auto;
@@ -103,6 +103,7 @@ nav > ul > li {
     padding: 0;
     margin: 0;
     background-color: var(--white);
+    z-index: 1;
 
     /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); Optional shadow for better visibility */
 }
